# mangle

./: .readthedocs.yaml  CONTINUATION_FIX.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  README.md  SOLUTION_SUMMARY.md  example_new_syntax.mangle  generate_parser.sh  go.mod  go.sum
.github/workflows/: go-mod-check.yml
analysis/: boundscheck.go  declcheck.go  declcheck_test.go  exprtyping_test.go  infercontext.go  nametrie.go  nametrie_test.go  rectify.go  rectify_test.go  rewriteclause.go  rewriteclause_test.go  rulecheck.go  stratification.go  stratification_test.go  temporal.go  temporal_test.go  temporal_validation_test.go  validation.go  validation_test.go  varlist.go  varlist_test.go
analysis/test_cases/: decl_struct.mg  decl_tagged_union.mg  filter.mg  fun.mg  infinite.mg  neg_arity_mismatch.mg  neg_duplicate_decl.mg  neg_plusarg.mg  neg_polymorphic_match.mg  polymorphic_feasible.mg
ast/: ast.go  ast_test.go  decl.go  decl_test.go  serde.go  serde_test.go  temporal.go  temporal_string_test.go  temporal_test.go
builtin/: builtin.go  builtin_test.go  temporal.go  temporal_test.go
cmd/mangle-lint/: main.go
cmd/mgwhy/: main.go
cmd/scinfo/: main.go
docs/: README.md  README_grammar.md  aggregation_syntax.md  bibliography.md  decimal_design.md  example_volunteer_api.md  example_volunteer_db.md  explanation_derived_facts.md  grammar.ebnf  grammar_railroad_core.html  grammar_railroad_full.html  guidelines.md  index.md  meta.md  provenance.md  rationale.md  spec_builtin_operations.md  spec_datamodel.md  spec_decls.md  spec_explain_relational_algebra.md  structured_data.md  using_the_interpreter.md
engine/: aggregation_test.go  inclusioncheck.go  inclusioncheck_test.go  map_lattice_test.go  naivebottomup.go  naivebottomup_test.go  premise.go  recorder.go  seminaivebottomup.go  seminaivebottomup_test.go  temporal.go  temporal_integration_test.go  temporal_test.go  topdown.go  topdown_test.go  transformer.go  transformer_test.go
examples/: aggregation.mg  ancestor.mg  dataflow_analysis.mg  dataflow_liveness.mg  example.mg  example_type_error.mg  examples_test.go  flow_checking.mg  map_aggregation.mg  one_or_two_leg_trip.mg  project_aggregation.mg  reversesamegen.mg  shortest_path.mg  tagged_union.mg  temporal_graph_intervals.mg  temporal_graph_points.mg  temporal_sequence.mg
factstore/: benchmark_test.go  columnarstore.go  factstore.go  factstore_test.go  interval_tree.go  interval_tree_test.go  simplecolumn.go  simplecolumn_test.go  temporal.go  temporal_indexed.go  temporal_test.go
functional/: functional.go  functional_test.go  temporal_test.go
interpreter/: interpret_test.go  interpreter.go  interpreter_temporal_test.go  interpreter_test.go
interpreter/main/: main.go
interpreter/mg/: mg.go
json2struct/: json2struct.go  json2struct_test.go
lint/: check_complexity.go  check_dead_code.go  check_missing_doc.go  check_naming.go  check_singleton.go  check_unused_pred.go  lint.go  lint_test.go  output.go  rules.go
parse/: README.md  parse.go  parse_strings_test.go  parse_test.go  temporal_test.go
proto2struct/: proto2struct.go
provenance/: facts.go  provenance.go  provenance_test.go  recorder.go  recorder_test.go
readthedocs/: README.md  aggregation.md  basictypes.md  conf.py  constructedtypes.md  datalog.md  datatypes.md  declarations.md  grammar.md  index.md  installing.md  provenance.md  requirements.txt  temporal.md  typeexpressions.md
rewrite/: rewrite.go  rewrite_test.go
rust/: ARCHITECTURE_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
rust/analysis/: Cargo.toml  README.md
rust/analysis/src/: lib.rs  lowering.rs  planner.rs  rename.rs  simple_program.rs  stratification.rs  tests.rs  type_check.rs
rust/ast/: Cargo.toml  README.md
rust/ast/src/: lib.rs  pretty.rs
rust/codegen/: Cargo.toml
rust/codegen/src/: lib.rs
rust/driver/: Cargo.toml  LICENSE  README.md
rust/driver/src/: lib.rs
rust/engine/: Cargo.toml  README.md
rust/engine/src/: lib.rs  naive.rs
rust/factstore/: Cargo.toml  README.md
rust/factstore/src/: lib.rs  tablestore.rs
rust/interpreter/: Cargo.toml  README.md
rust/interpreter/src/: lib.rs
rust/ir/: Cargo.toml  README.md
rust/ir/src/: compat_test.rs  lib.rs  physical.rs
rust/parse/: Cargo.toml  README.md
rust/parse/src/: error.rs  lib.rs  quote.rs  scan.rs  token.rs
rust/simplecolumn/: Cargo.toml
rust/simplecolumn/src/: lib.rs
rust/vm/: Cargo.toml  README.md
rust/vm/src/: composite_host.rs  csv_host.rs  lib.rs
rust/vm/tests/: e2e.rs  reachability.rs
scripts/: generate_railroad_diagrams.py
symbols/: decldesugar.go  decldesugar_test.go  nametrie.go  nametrie_test.go  symbols.go  symbols_test.go  typeexprs.go
unionfind/: unifytypeexpr.go  unionfind.go  unionfind_test.go
