# Cargo.toml for mangle-rs workspace
[workspace]
resolver = "2"

members = [
    "ast",
    "analysis",
    "engine",
    "factstore",
    "parse"
]

[workspace.package]
version = "0.1.1"
authors = ["Burak Emir <burak.emir@gmail.com>"]
edition = "2021"
description = "Rust implementation of Mangle, a logic programming language"
documentation = "https://github.com/google/mangle"
license = "Apache-2.0"
homepage = "https://github.com/google/mangle"
repository = "https://github.com/google/mangle"
readme = "README.md"

[workspace.dependencies]
anyhow = "1.0"
bumpalo = "3.14"
googletest = { version = "0.11.0", features = ["anyhow"] }
mangle-analysis = { version = "0.1.1", path = "./analysis" }
mangle-ast = { version = "0.1.1", path = "./ast" }
mangle-engine = { version = "0.1.1", path = "./engine" }
mangle-factstore = { version = "0.1.1", path = "./factstore" }
mangle-parse = { version = "0.1.1", path = "./parse" }
thiserror = "1.0.58"

