[package]
name = "mangle-analysis"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repo.workspace = true

[dependencies]
bumpalo.workspace = true
mangle-ast.workspace = true
mangle-factstore.workspace = true
