[package]
name = "mangle-codegen"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
mangle-ir.workspace = true
mangle-ast.workspace = true
mangle-analysis.workspace = true
wasm-encoder = "0.240"
anyhow.workspace = true
fxhash.workspace = true

[dev-dependencies]
wasmparser = "0.240"
