[package]
name = "mangle-driver"
version.workspace = true
edition.workspace = true
description = "Driver for Mangle compilation pipeline"
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
mangle-ast.workspace = true
mangle-parse = { workspace = true }
mangle-analysis.workspace = true
fxhash.workspace = true
mangle-ir.workspace = true
mangle-codegen.workspace = true
mangle-interpreter.workspace = true
mangle-vm = { workspace = true, optional = true } # For server mode
anyhow.workspace = true
# log.workspace = true

[features]
default = []
server = ["dep:mangle-vm"]
