[package]
name = "mangle-engine"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
mangle-analysis.workspace = true
mangle-ast.workspace = true
mangle-factstore.workspace = true
fxhash.workspace = true
