[package]
name = "mangle-factstore"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repo.workspace = true

[dependencies]
anyhow.workspace = true
bumpalo.workspace = true
mangle-ast.workspace = true