[package]
name = "mangle-interpreter"
version.workspace = true
edition.workspace = true
description = "Pure Rust interpreter for Mangle IR"
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
mangle-ir.workspace = true
mangle-ast.workspace = true
mangle-factstore = { workspace = true, features = ["edge"] }
anyhow.workspace = true

