[package]
name = "mangle-ir"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"


[dependencies]
# We might need dependencies later, e.g. for smallvec or indices
