[package]
name = "mangle-parse"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
bumpalo.workspace = true
mangle-ast.workspace = true
thiserror.workspace = true
