[package]
name = "mangle-simplecolumn"
version.workspace = true
edition.workspace = true
description = "SimpleColumn storage format support for Mangle"
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow.workspace = true
mangle-ast.workspace = true
mangle-ir.workspace = true
mangle-parse.workspace = true
mangle-factstore = { workspace = true }
mangle-interpreter = { workspace = true, optional = true }

[features]
default = []
server = ["mangle-factstore/server"]
edge = ["dep:mangle-interpreter", "mangle-factstore/edge"]
