[package]
name = "mangle-vm"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
wasmtime.workspace = true
mangle-factstore = { workspace = true, features = ["server"] }
anyhow.workspace = true
csv = { workspace = true, optional = true }

[dev-dependencies]
mangle-codegen.workspace = true
mangle-analysis.workspace = true
mangle-ast.workspace = true
mangle-ir.workspace = true
tempfile.workspace = true
mangle-simplecolumn.workspace = true
# mangle-factstore = { workspace = true, features = ["server"] }

[features]
default = []
csv_storage = ["dep:csv"]
